--- a/src/App.css
+++ b/src/App.css
@@ -244,11 +244,12 @@ main {
       max-width: 300px;
 
       img {
-        width: 100%;
+        position: relative;
+        left: -15px;
+        width: 300px;
         height: 200px;
-        object-fit: cover;
+        object-fit: fill;
         border-radius: 20px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
       }
 
       h2 {
