--- a/src/App.css
+++ b/src/App.css
@@ -211,8 +211,19 @@ main {
     }
   }
 
+  @media (max-width: 768px) {
+    .articles_container {
+      padding: 0;
+      padding-top: 5rem;
+    }
+  }
+  @media (max-width: 500px) {
+    .articles_container {
+      padding-top: 2rem;
+    }
+  }
+
   .posts_container {
-    padding: 10rem 0;
     background-image: url("/public/postsBackground.svg");
     background-size: cover;
     display: flex;
@@ -221,6 +232,18 @@ main {
 
     .posts_heading {
       width: 20rem;
+    }
+
+    @media (max-width: 768px) {
+      .posts_heading {
+        padding-top: 5rem;
+      }
+    }
+
+    @media (max-width: 508px) {
+      .posts_heading {
+        padding-top: 2rem;
+      }
     }
 
     @media (max-width: 400px) {
@@ -233,6 +256,7 @@ main {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      width: 100%;
     }
 
     article {
@@ -246,7 +270,7 @@ main {
       img {
         position: relative;
         left: -15px;
-        width: 300px;
+        max-width: 300px;
         height: 200px;
         object-fit: fill;
         border-radius: 20px;
@@ -483,6 +507,7 @@ main {
 
 footer {
   display: flex;
+  align-items: center;
   justify-content: space-evenly;
   padding: 0 5rem;
 
@@ -491,6 +516,7 @@ footer {
     display: flex;
     flex-direction: column;
   }
+
   h1 {
     color: #ff55fb;
     font-weight: bold;
@@ -512,6 +538,9 @@ footer {
     }
 
     button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 15rem;
       height: 3.5rem;
       border: none;
@@ -549,7 +578,7 @@ footer {
       transform: translateY(-50%);
       height: 25px;
       width: 25px;
-      border: 4px solid #91E523;
+      border: 4px solid #91e523;
       border-radius: 7px;
     }
 
@@ -560,7 +589,7 @@ footer {
 
     /* When the checkbox is checked */
     input:checked ~ .checkmark {
-      background-color: #91E523;
+      background-color: #91e523;
     }
 
     /* Create the checkmark */
@@ -608,3 +637,121 @@ footer {
   }
 }
 
+@media (max-width: 1100px) {
+  footer {
+    .footer_content {
+      width: 30rem;
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      .email_input {
+        input {
+          width: 15rem;
+          height: 2.5rem;
+          font-size: 1rem;
+        }
+        button {
+          width: 10rem;
+          height: 3rem;
+          font-size: 0.9rem;
+        }
+      }
+      .terms_container {
+        font-size: 0.8rem;
+
+        .checkmark {
+          height: 15px;
+          width: 15px;
+        }
+        .checkmark:after {
+          left: 5px;
+          top: 2px;
+          width: 3px;
+          height: 6px;
+        }
+      }
+      .footer_links {
+        a {
+          font-size: 0.8rem;
+        }
+      }
+    }
+    img {
+      width: 15rem;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  footer {
+    padding: 0;
+    width: 100%;
+
+    img {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  footer {
+    .footer_content {
+      width: 100%;
+      padding: 0 1rem;
+
+      h1 {
+        font-size: 1rem;
+      }
+
+      p {
+        font-size: 0.7rem;
+      }
+
+      .email_input {
+        width: 100%;
+        flex-direction: column;
+        gap: 1rem;
+
+        input {
+          box-sizing: border-box;
+          width: 100%;
+          height: 2.5rem;
+          font-size: 0.8rem;
+        }
+
+        button {
+          box-sizing: border-box;
+          width: 100%;
+          height: 2.5rem;
+          font-size: 0.8rem;
+        }
+      }
+
+      .terms_container {
+        font-size: 0.8rem;
+
+        .checkmark {
+          height: 15px;
+          width: 15px;
+        }
+        .checkmark:after {
+          left: 5px;
+          top: 2px;
+          width: 3px;
+          height: 6px;
+        }
+      }
+      .footer_links {
+        a {
+          font-size: 0.6rem;
+        }
+      }
+    }
+  }
+}
