--- a/src/App.css
+++ b/src/App.css
@@ -254,61 +254,65 @@ main {
     }
 
     .posts {
-      display: flex;
+      /* display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: center; */
       width: 100%;
-    }
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(19.5rem, 1fr));
+      grid-column-gap: 1rem;
+      grid-row-gap: 1rem;
 
-    article {
-      margin: 1rem;
-      padding: 1rem;
-      background-color: #fff;
-      border-radius: 20px;
-      width: 100%;
-      max-width: 300px;
-
-      img {
-        position: relative;
-        left: -15px;
-        max-width: 300px;
-        height: 200px;
-        object-fit: fill;
+      article {
+        box-sizing: border-box;
+        padding: 1rem;
+        background-color: #fff;
         border-radius: 20px;
-      }
-
-      h2 {
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
-      }
-
-      .pinkHeading {
-        color: #ff55fb;
-      }
-
-      .greenHeading {
-        color: #91e523;
-      }
-
-      p {
-        font-size: 1rem;
-        margin-bottom: 1rem;
-      }
-
-      a {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-        text-decoration: none;
-        font-weight: bold;
-        color: inherit;
+        width: 100%;
 
         img {
-          width: 2rem;
-          height: 2rem;
+          position: relative;
+          /* left: -15px; */
+          width: 100%;
+          /* height: 200px; */
+          object-fit: cover;
+          border-radius: 20px;
+        }
+
+        h2 {
+          font-size: 1.2rem;
+          margin-bottom: 1rem;
+        }
+
+        .pinkHeading {
+          color: #ff55fb;
+        }
+
+        .greenHeading {
+          color: #91e523;
+        }
+
+        p {
+          font-size: 1rem;
+          margin-bottom: 1rem;
+        }
+
+        a {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+          text-decoration: none;
+          font-weight: bold;
+          color: inherit;
+
+          img {
+            width: 2rem;
+            height: 2rem;
+          }
         }
       }
     }
+
     .more_btn {
       width: 16rem;
       height: 4rem;
