--- a/src/App.css
+++ b/src/App.css
@@ -351,13 +351,13 @@ main {
       }
 
       .video_background {
-        border-radius: 20px;
+        border-radius: 40px;
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        transform: rotate(-10deg); /* Tilts the background */
+        top: -22px;
+        left: 10px;
+        width: calc(100% - 1.3rem);
+        height: calc(100% + 2rem);
+        transform: rotate(5deg); /* Tilts the background */
         z-index: -1;
         background: #70e8ff;
       }
@@ -388,7 +388,7 @@ main {
       flex-direction: row-reverse;
 
       .video_background {
-        transform: rotate(10deg); /* Tilts the background */
+        transform: rotate(-3deg);
       }
     }
 
