--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,7 @@ main {
     justify-content: center;
 
     article {
+      box-sizing: border-box;
       text-align: center;
       margin: 1rem;
       padding: 1rem;
@@ -199,6 +200,15 @@ main {
       border-radius: 20px;
       width: 100%;
       max-width: 250px;
+
+      video {
+        box-sizing: border-box;
+        width: 100%;
+        height: 200px;
+        object-fit: contain;
+        padding: 2rem;
+        border-radius: 20px;
+      }
 
       h2 {
         font-size: 1.5rem;
@@ -209,6 +219,11 @@ main {
         font-size: 1rem;
         margin-bottom: 1rem;
       }
+    }
+
+    article:hover {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      box-shadow:inset 0px 0px 0px 2px #ffe815;
     }
   }
 
