--- a/src/App.css
+++ b/src/App.css
@@ -182,13 +182,21 @@ header {
 
 main {
   margin: 0 7rem;
-  .articles_container {
-    padding: 10rem 0;
+  .articles_background {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     background-image: url("/public/articlesBackground.svg");
     background-size: cover;
+  }
+  .articles_container {
+    padding: 10rem 0;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 80rem;
 
     article {
       box-sizing: border-box;
@@ -223,7 +231,7 @@ main {
 
     article:hover {
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-      box-shadow:inset 0px 0px 0px 2px #ffe815;
+      box-shadow: inset 0px 0px 0px 2px #ffe815;
     }
   }
 
@@ -249,10 +257,10 @@ main {
     .posts_heading {
       width: 20rem;
       margin-bottom: 2rem;
-      font-family: 'Brevia', sans-serif;
+      font-family: "Brevia", sans-serif;
       color: #ff55fb;
-      border: .45rem solid #ff55fb;
-      padding: .3rem 2.5rem;
+      border: 0.45rem solid #ff55fb;
+      padding: 0.3rem 2.5rem;
       text-align: center;
       border-radius: 5rem;
     }
