--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,17 @@ main {
     background-image: url("/public/articlesBackground.svg");
     background-size: cover;
   }
+
+  @media (max-width: 768px) {
+    .articles_background {
+      padding-bottom: 10rem;
+    }
+  }
+  @media (max-width: 630px) {
+    .articles_background {
+      padding-bottom: 20rem;
+    }
+  }
   .articles_container {
     padding: 10rem 0;
 
@@ -267,32 +278,35 @@ main {
 
     @media (max-width: 768px) {
       .posts_heading {
-        padding-top: 5rem;
+        font-size: 1.5rem;
+        width: 15rem;
+        padding: 0.3rem 2rem;
       }
     }
 
     @media (max-width: 508px) {
       .posts_heading {
-        padding-top: 2rem;
+        font-size: 1.2rem;
+        width: 12rem;
+        padding: 0.3rem 1.5rem;
       }
     }
 
     @media (max-width: 400px) {
       .posts_heading {
-        width: 15rem;
+        font-size: 1rem;
+        width: 10rem;
+        padding: 0.3rem 1rem;
       }
     }
 
     .posts {
-      /* display: flex;
-      flex-wrap: wrap;
-      justify-content: center; */
       width: 100%;
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(19.5rem, 1fr));
       grid-column-gap: 1rem;
       grid-row-gap: 1rem;
-
+      max-width: 80rem;
       article {
         box-sizing: border-box;
         padding: 1rem;
