--- a/src/App.css
+++ b/src/App.css
@@ -113,13 +113,13 @@ body {
 }
 
 header {
+  margin: 0 7rem;
+  max-width: 80rem;
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
-  background-color: #f8f9fa;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem 0;
 
   .burger_btn {
     display: none;
@@ -316,9 +316,9 @@ main {
 
         img {
           position: relative;
-          /* left: -15px; */
-          width: 100%;
-          /* height: 200px; */
+          left: -15px;
+          width: calc(100% + 2rem);
+          box-sizing: border-box;
           object-fit: cover;
           border-radius: 20px;
         }
@@ -555,18 +555,25 @@ main {
 }
 
 @media (max-width: 1000px) {
-  main {
+  main,
+  header {
     margin: 0 4rem;
   }
 }
 @media (max-width: 800px) {
-  main {
+  main,
+  header {
     margin: 0 2rem;
   }
 }
 @media (max-width: 500px) {
-  main {
+  main,
+  header {
     margin: 0;
+  }
+
+  header {
+    padding: 0 2rem;
   }
 }
 
