--- a/src/App.css
+++ b/src/App.css
@@ -268,12 +268,15 @@ main {
     article {
       box-sizing: border-box;
       text-align: center;
+      display: flex;
+      flex-direction: column;
       margin: 1rem;
-      padding: 1rem;
+      padding: 0 1rem;
       background-color: #fff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 20px;
       width: 100%;
+      height: 360px;
       max-width: 250px;
 
       video {
@@ -281,18 +284,30 @@ main {
         width: 100%;
         height: 200px;
         object-fit: contain;
-        padding: 2rem;
+        padding: 0 1.8rem;
         border-radius: 20px;
       }
 
       h2 {
-        font-size: 1.5rem;
-        margin-bottom: 1rem;
+        color: #FF55FB;
+        margin: 0;
+        font-size: 1.2rem;
+        position: relative;
+        top: -20px;
       }
 
       p {
-        font-size: 1rem;
-        margin-bottom: 1rem;
+        font-size: .9rem;
+        margin: 0;
+        position: relative;
+        top: -10px;
+      }
+
+      a {
+        position: relative;
+        img {
+          width: 2.8rem;
+        }
       }
     }
 
