--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ header {
 
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 1rem 0;
 
@@ -127,11 +127,14 @@ header {
 
   a,
   button {
+    cursor: pointer;
+    font-family: "Brevia", sans-serif;
     border: none;
     background: none;
     text-decoration: none;
     color: #707070;
     font-size: 1rem;
+    font-weight: 500;
     padding: 0;
     margin: 0;
     text-align: start;
@@ -139,6 +142,7 @@ header {
 
   .active {
     color: #ff55fb;
+    font-weight: bold;
   }
 }
 
