--- a/src/App.css
+++ b/src/App.css
@@ -113,12 +113,12 @@ body {
 }
 
 header {
-  margin: 0 7rem;
-
   position: relative;
-  display: flex;
-  justify-content: space-around;
+  margin: 0 15%;
   align-items: center;
+  align-self: center;
+  display: flex;
+  justify-content: space-between;
   padding: 1rem 0;
 
   .burger_btn {
@@ -165,6 +165,13 @@ header {
       display: none;
     }
   }
+}
+
+.banner {
+  width: 85%;
+  height: 407px;
+  box-shadow: 0px 0px 7px #00000029;
+  border-radius: 24px;
 }
 
 .menu {
@@ -221,13 +228,13 @@ main {
       width: 100%;
 
       img {
-        max-width: 15rem; 
+        max-width: 15rem;
         object-fit: cover;
         border-radius: 100%;
       }
 
       h2 {
-        color: #FF55FB;
+        color: #ff55fb;
         font-size: 1.2rem;
         margin-bottom: 1rem;
       }
@@ -246,7 +253,6 @@ main {
         p {
           font-size: 0.8rem;
         }
-      
       }
     }
   }
@@ -262,7 +268,7 @@ main {
     }
   }
   .articles_container {
-    padding: 10rem 0;
+    padding: 7rem 0;
 
     display: flex;
     flex-wrap: wrap;
@@ -293,7 +299,7 @@ main {
       }
 
       h2 {
-        color: #FF55FB;
+        color: #ff55fb;
         margin: 0;
         font-size: 1.2rem;
         position: relative;
@@ -301,7 +307,7 @@ main {
       }
 
       p {
-        font-size: .9rem;
+        font-size: 0.9rem;
         margin: 0;
         position: relative;
         top: -10px;
@@ -376,57 +382,74 @@ main {
     }
 
     .posts {
-      width: 100%;
+      width: 70vw;
+      margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(19.5rem, 1fr));
-      grid-column-gap: 1rem;
-      grid-row-gap: 1rem;
-      max-width: 80rem;
+      justify-content: center;
+      grid-template-columns: repeat(auto-fill, minmax(314px, 1fr));
+      grid-gap: 2rem;
+
       article {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: start;
         box-sizing: border-box;
         padding: 1rem;
         background-color: #fff;
         border-radius: 20px;
         width: 100%;
 
-        img {
-          position: relative;
-          left: -15px;
-          width: calc(100% + 2rem);
-          box-sizing: border-box;
-          object-fit: cover;
-          border-radius: 20px;
-        }
-
-        h2 {
-          font-size: 1.2rem;
-          margin-bottom: 1rem;
-        }
-
-        .pinkHeading {
-          color: #ff55fb;
-        }
-
-        .greenHeading {
-          color: #91e523;
-        }
-
-        p {
-          font-size: 1rem;
-          margin-bottom: 1rem;
-        }
-
-        a {
-          display: flex;
-          align-items: center;
+        .post_text {
+          height: 100%;
           gap: 1rem;
-          text-decoration: none;
-          font-weight: bold;
-          color: inherit;
-
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
           img {
-            width: 2rem;
-            height: 2rem;
+            position: relative;
+            left: -15px;
+            width: 340px;
+            height: 253px;
+            box-sizing: border-box;
+            object-fit: cover;
+            border-radius: 20px;
+          }
+
+          h2 {
+            margin: 0;
+            font-size: 1.2rem;
+            width: 314px;
+          }
+
+          .pinkHeading {
+            color: #ff55fb;
+          }
+
+          .greenHeading {
+            color: #91e523;
+          }
+
+          p {
+            margin: 0;
+            font-size: 1rem;
+            width: 314px;
+          }
+
+          a {
+            width: 314px;
+            display: flex;
+            align-items: center;
+            gap: 1.5rem;
+            text-decoration: none;
+            font-weight: bold;
+            color: #707070;
+
+            img {
+              width: 1.6rem;
+              height: 1.6rem;
+            }
           }
         }
       }
@@ -435,6 +458,7 @@ main {
     .more_btn {
       width: 16rem;
       height: 4rem;
+      margin: 4rem 0 6rem 0;
     }
 
     .more_btn img {
