--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,15 @@
   -moz-osx-font-smoothing: grayscale;
   font-family: "Brevia", sans-serif;
 }
+.diff_div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.diff_img {
+  width: 72%;
+}
 
 body {
   margin: 0;
@@ -114,15 +123,25 @@ body {
 
 header {
   position: relative;
-  margin: 0 15%;
+  margin: 0 25rem;
   align-items: center;
   align-self: center;
   display: flex;
-  justify-content: space-between;
-  padding: 1rem 0;
+  justify-content: center;
+  gap: calc(4rem + 7px);
+  padding: 1.3rem 0;
+  font-size: 1rem;
+  letter-spacing: -0.4px;
 
   .burger_btn {
     display: none;
+  }
+
+  .logo_btn {
+    position: relative;
+    left: 9.2px;
+    top: 2.6px;
+    margin: 0 calc(6rem);
   }
 
   a,
@@ -168,10 +187,11 @@ header {
 }
 
 .banner {
-  width: 85%;
-  height: 407px;
+  width: 57vw;
+  height: 413px;
   box-shadow: 0px 0px 7px #00000029;
   border-radius: 24px;
+  margin: calc(1.8rem - 14px) 0 calc(1rem + 9px) 0;
 }
 
 .menu {
@@ -196,7 +216,7 @@ header {
 }
 
 main {
-  margin: 0 7rem;
+  margin: 0 17rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -269,7 +289,7 @@ main {
   }
   .articles_container {
     padding: 7rem 0;
-
+    margin: 1.2rem 0 0 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -279,44 +299,44 @@ main {
       box-sizing: border-box;
       text-align: center;
       display: flex;
+      align-items: center;
       flex-direction: column;
-      margin: 1rem;
+      margin: calc(1.3rem + 0.5px) 1rem;
       padding: 0 1rem;
       background-color: #fff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 20px;
       width: 100%;
-      height: 360px;
+      height: 363px;
       max-width: 250px;
 
       video {
         box-sizing: border-box;
-        width: 100%;
-        height: 200px;
+        width: 95%;
+        height: 145px;
         object-fit: contain;
-        padding: 0 1.8rem;
         border-radius: 20px;
+        margin: 0.7rem 0 0.3rem 0;
       }
 
       h2 {
         color: #ff55fb;
         margin: 0;
         font-size: 1.2rem;
-        position: relative;
-        top: -20px;
       }
 
       p {
-        font-size: 0.9rem;
-        margin: 0;
-        position: relative;
-        top: -10px;
+        font-size: 1rem;
+        margin: 0.7rem 0;
+        overflow: clip;
+        width: 14rem;
+        height: 4.5rem;
       }
 
       a {
-        position: relative;
+        margin-top: 0.35rem;
         img {
-          width: 2.8rem;
+          width: 2.9rem;
         }
       }
     }
@@ -345,16 +365,20 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    padding-top: 1.5rem;
 
     .posts_heading {
-      width: 20rem;
-      margin-bottom: 2rem;
+      width: calc(16rem + 6px);
+      margin-bottom: 3.3rem;
       font-family: "Brevia", sans-serif;
       color: #ff55fb;
-      border: 0.45rem solid #ff55fb;
-      padding: 0.3rem 2.5rem;
+      border: 0.4rem solid #ff55fb;
+      padding: 0.4rem 2.2rem;
       text-align: center;
       border-radius: 5rem;
+      font-size: 1.5rem;
+      letter-spacing: 0.8px;
     }
 
     @media (max-width: 768px) {
@@ -382,11 +406,11 @@ main {
     }
 
     .posts {
-      width: 70vw;
+      width: 60vw;
       margin: 0 auto;
       display: grid;
       justify-content: center;
-      grid-template-columns: repeat(auto-fill, minmax(314px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
       grid-gap: 2rem;
 
       article {
@@ -399,7 +423,6 @@ main {
         padding: 1rem;
         background-color: #fff;
         border-radius: 20px;
-        width: 100%;
 
         .post_text {
           height: 100%;
@@ -410,7 +433,7 @@ main {
           img {
             position: relative;
             left: -15px;
-            width: 340px;
+            width: 350px;
             height: 253px;
             box-sizing: border-box;
             object-fit: cover;
@@ -418,9 +441,12 @@ main {
           }
 
           h2 {
-            margin: 0;
-            font-size: 1.2rem;
-            width: 314px;
+            margin: 0.2rem 0 0 0;
+            font-size: 1.3rem;
+            width: 350px;
+            position: relative;
+            right: -20px;
+            top: 2px;
           }
 
           .pinkHeading {
@@ -434,7 +460,9 @@ main {
           p {
             margin: 0;
             font-size: 1rem;
-            width: 314px;
+            width: 350px;
+            position: relative;
+            right: -20px;
           }
 
           a {
@@ -456,30 +484,41 @@ main {
     }
 
     .more_btn {
-      width: 16rem;
+      width: calc(16rem - 9px);
       height: 4rem;
       margin: 4rem 0 6rem 0;
+      position: relative;
+      top: -5px;
+      left: -1.4rem;
     }
 
     .more_btn img {
-      width: 16rem;
+      width: calc(16rem - 9px);
       height: 4rem;
     }
   }
 
   .videos_container {
-    padding: 10rem 0;
+    padding: 10rem 0 2rem 0;
     background: #ffe815;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     z-index: -1;
+    width: 100%;
+
+    a {
+      position: relative;
+      margin-top: calc(6rem + 5px);
+      right: 20px;
+    }
 
     .video {
       display: flex;
       align-items: center;
       justify-content: space-evenly;
       z-index: 0;
+      gap: calc(5rem + 10px);
 
       .video-wrapper {
         position: relative;
@@ -489,11 +528,11 @@ main {
       .video_background {
         border-radius: 40px;
         position: absolute;
-        top: -22px;
-        left: 10px;
-        width: calc(100% - 1.3rem);
-        height: calc(100% + 2rem);
-        transform: rotate(5deg); /* Tilts the background */
+        top: -19px;
+        left: 31px;
+        width: calc(100% - 1rem - 11px);
+        height: calc(100% + 3rem - 10px);
+        transform: rotate(5deg);
         z-index: -1;
         background: #70e8ff;
       }
@@ -501,14 +540,18 @@ main {
       img {
         position: relative;
         z-index: 0;
+        left: 18px;
+        top: 9px;
+        height: calc(28rem + 17px);
       }
 
       .play-button {
         position: absolute;
-        top: 50%;
-        left: 50%;
+        top: calc(50% - 0px);
+        left: calc(50% + 18px);
         transform: translate(-50%, -50%);
         z-index: 1;
+        width: calc(5rem + 9px);
       }
 
       h2 {
@@ -516,15 +559,42 @@ main {
       }
 
       .text_container {
-        width: 30rem;
+        position: relative;
+        left: -45px;
+        top: 10px;
+        width: 20rem;
+
+        p {
+          font-size: 1.1rem;
+        }
       }
     }
     .video:nth-child(2) {
-      margin-top: 10rem;
+      margin-top: 5rem;
       flex-direction: row-reverse;
 
       .video_background {
         transform: rotate(-3deg);
+        top: -15px;
+        left: -5px;
+        width: calc(100% - 1rem - 10px);
+      }
+
+      img {
+        left: -18px;
+        width: calc(50rem - 10px);
+      }
+
+      .play-button {
+        left: calc(50% - 18px);
+        top: calc(50% + 4px);
+        width: calc(5rem + 9px);
+      }
+      
+      .text_container {
+        left: 25px;
+        top: 15px;
+        width: 20rem;
       }
     }
 
@@ -680,7 +750,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding: 0 5rem;
+  padding: 5rem 20rem 5rem 24rem;
 
   .footer_content {
     width: 40rem;
@@ -688,19 +758,32 @@ footer {
     flex-direction: column;
   }
 
+  img {
+    position: relative;
+    top: -5rem;
+  }
+
   h1 {
+    margin-bottom: 0;
     color: #ff55fb;
     font-weight: bold;
     font-style: italic;
+    font-size: 1.6rem;
+  }
+
+  p {
+    width: 50rem;
   }
 
   .email_input {
+    margin-top: .7rem;
     display: flex;
-    gap: 2rem;
+    gap: 3.5rem;
+    width: 50rem;
 
     input {
-      width: 20rem;
-      height: 3rem;
+      width: 21rem;
+      height: 2.9rem;
       border: 3px solid #91e523;
       border-radius: 40px;
       font-size: 1.2rem;
@@ -712,7 +795,7 @@ footer {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 15rem;
+      width: 16rem;
       height: 3.5rem;
       border: none;
       border-radius: 40px;
@@ -790,20 +873,25 @@ footer {
   }
 
   .green_line {
+    margin: 2rem 0;
     width: 100%;
     height: 2px;
     background-color: #91e523;
   }
 
   .footer_links {
+    margin-top: 1rem;
     display: flex;
-    gap: 2rem;
-    justify-content: start;
+    flex-direction: row;
     align-items: center;
+    gap: 1rem;
+    p {
+      width: 12rem;
+    }
 
     a {
       color: #707070;
-      font-size: 1.2rem;
+      font-size: 1rem;
     }
   }
 }
