--- a/src/App.css
+++ b/src/App.css
@@ -221,6 +221,7 @@ main {
   flex-direction: column;
   align-items: center;
   .articles_background {
+    margin-bottom: 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -360,13 +361,13 @@ main {
   }
 
   .posts_container {
-    background-image: url("/public/postsBackground.svg");
-    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding-top: 1.5rem;
+    background-image: url("/public/postsBackground.svg");
+    background-size: cover;
+    /* padding-top: 1.5rem; */
 
     .posts_heading {
       width: calc(16rem + 6px);
@@ -407,11 +408,11 @@ main {
 
     .posts {
       width: 60vw;
-      margin: 0 auto;
       display: grid;
       justify-content: center;
       grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-      grid-gap: 2rem;
+      grid-column-gap: 2rem;
+      grid-row-gap: 1.7rem;
 
       article {
         position: relative;
@@ -430,6 +431,9 @@ main {
           display: flex;
           flex-direction: column;
           justify-content: space-between;
+          position: relative;
+          right: -20px;
+
           img {
             position: relative;
             left: -15px;
@@ -444,8 +448,6 @@ main {
             margin: 0.2rem 0 0 0;
             font-size: 1.3rem;
             width: 350px;
-            position: relative;
-            right: -20px;
             top: 2px;
           }
 
@@ -461,8 +463,6 @@ main {
             margin: 0;
             font-size: 1rem;
             width: 350px;
-            position: relative;
-            right: -20px;
           }
 
           a {
@@ -499,6 +499,7 @@ main {
   }
 
   .videos_container {
+    margin-top: .3rem;
     padding: 10rem 0 2rem 0;
     background: #ffe815;
     display: flex;
@@ -748,9 +749,16 @@ main {
 
 footer {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   padding: 5rem 20rem 5rem 24rem;
+
+  .footer_container {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+  }
 
   .footer_content {
     width: 40rem;
@@ -760,7 +768,7 @@ footer {
 
   img {
     position: relative;
-    top: -5rem;
+    top: -3rem;
   }
 
   h1 {
@@ -873,13 +881,14 @@ footer {
   }
 
   .green_line {
-    margin: 2rem 0;
-    width: 100%;
+    width: 88%;
     height: 2px;
     background-color: #91e523;
   }
 
   .footer_links {
+    margin-left: 5rem;
+    align-self: flex-start;
     margin-top: 1rem;
     display: flex;
     flex-direction: row;
