--- a/src/App.css
+++ b/src/App.css
@@ -773,6 +773,8 @@ footer {
 
   p {
     width: 50rem;
+    font-weight: 400;
+    font-size: 1.1rem;
   }
 
   .email_input {
@@ -831,8 +833,8 @@ footer {
       top: 50%;
       left: 0;
       transform: translateY(-50%);
-      height: 25px;
-      width: 25px;
+      height: 18px;
+      width: 18px;
       border: 4px solid #91e523;
       border-radius: 7px;
     }
@@ -861,8 +863,8 @@ footer {
 
     /* Checkmark style */
     .checkmark:after {
-      left: 9px;
-      top: 5px;
+      left: 5px;
+      top: 1px;
       width: 5px;
       height: 10px;
       border: solid white;
@@ -887,13 +889,17 @@ footer {
     flex-direction: row;
     align-items: center;
     gap: 1rem;
+
     p {
       width: 12rem;
+      font-weight: 500;
+      font-size: 1rem;
     }
 
     a {
       color: #707070;
       font-size: 1rem;
+      font-weight: 600;
     }
   }
 }
