add colored borders to posts, fix text in several places, fix yellow background in videos container

--- a/src/App.css
+++ b/src/App.css
@@ -367,7 +367,7 @@ main {
     width: 100%;
     background-image: url("/public/postsBackground.svg");
     background-size: cover;
-    /* padding-top: 1.5rem; */
+    margin-bottom: 3.5rem;
 
     .posts_heading {
       width: calc(16rem + 6px);
@@ -411,8 +411,7 @@ main {
       display: grid;
       justify-content: center;
       grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-      grid-column-gap: 2rem;
-      grid-row-gap: 1.7rem;
+      grid-row-gap: 2rem;
 
       article {
         position: relative;
@@ -421,7 +420,8 @@ main {
         align-items: center;
         text-align: start;
         box-sizing: border-box;
-        padding: 1rem;
+        padding: 0 1rem;
+        margin: 1rem 0;
         background-color: #fff;
         border-radius: 20px;
 
@@ -480,20 +480,24 @@ main {
             }
           }
         }
-      }
+      }      
     }
+
+    article:nth-child(2), article:nth-child(5) {
+      border-left: 2px solid #91e52368;
+      border-right: 2px solid #91e52368;
+      border-radius: 0;
+    }
+
 
     .more_btn {
-      margin: 2.5rem 0 6rem;
-    }
-
-    .more_btn img {
+      margin-top: 2.5rem;
     }
   }
 
   .videos_container {
-    padding: 8.2rem 0 2rem 0;
-    background: #ffe815;
+    padding: 10rem 0 3rem 0;
+    background-image: url("/public/YellowBackground.svg");
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -547,17 +551,22 @@ main {
         width: calc(5rem + 9px);
       }
 
-      h2 {
-        color: #ff55fb;
-      }
+      
 
       .text_container {
         position: relative;
         left: -45px;
-        top: 10px;
+        top: 3px;
         width: 20rem;
 
+        h2 {
+          color: #ff55fb;
+          font-weight: 800;
+          margin-bottom: 1rem;
+        }
+
         p {
+          margin-top: .2rem;
           font-size: 1.1rem;
         }
       }
@@ -744,7 +753,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 5rem 20rem 5rem 24rem;
+  padding: 4.5rem 20rem 5rem 24rem;
 
   .footer_container {
     display: flex;
@@ -775,6 +784,7 @@ footer {
     width: 50rem;
     font-weight: 400;
     font-size: 1.1rem;
+    margin: .7rem 0;
   }
 
   .email_input {
@@ -785,7 +795,7 @@ footer {
 
     input {
       width: 21rem;
-      height: 2.9rem;
+      height: 2.8rem;
       border: 3px solid #91e523;
       border-radius: 40px;
       font-size: 1.2rem;
@@ -798,7 +808,7 @@ footer {
       align-items: center;
       justify-content: center;
       font-family: "Brevia", sans-serif;
-      width: 16rem;
+      width: 17rem;
       height: 3.5rem;
       border: none;
       border-radius: 40px;
